- Fixed bug #45682 (Unable to var_dump(DateInterval)).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@279801 c90b9560-bf6c-de11-be94-00142212c4b1